# DFT-UI

./: .gitignore  LICENSE  README.md  README.txt  config.yaml.example  pyproject.toml  remotes.json.example  vasp_auto
.github/workflows/: ci.yml
docs/: IMPROVEMENT_MEMO.md  INSTALL.md  MANUAL.md  PORTABILITY.md  Remote.txt  TUTORIALS_INDEX.md  TUTORIAL_01_BASICS_SCF.md  TUTORIAL_02_RELAXATION.md  TUTORIAL_03_CONVERGENCE.md  TUTORIAL_04_DOS_BANDS.md  TUTORIAL_05_MAGNETISM.md  TUTORIAL_06_WORKFLOW_CHAINING.md  TUTORIAL_07_NEB_BARRIER.md  TUTORIAL_08_SURFACE_SLAB_WORKFUNCTION.md  TUTORIAL_09_ML_PRERELAX.md  TUTORIAL_10_OPTICS_DIELECTRIC.md  TUTORIAL_11_DEFECTS_SUPERCELLS.md  TUTORIAL_12_AIMD.md  TUTORIAL_CATALYSIS.md  TUTORIAL_CEO2_GRAPHENE_CO2.md  TUTORIAL_HETEROSTRUCTURE.md
example/: INCAR  INCAR_bands  INCAR_charge_density  INCAR_dos  INCAR_freq  INCAR_hse06  INCAR_md  INCAR_neb  INCAR_optics  INCAR_phonon  INCAR_scf  INCAR_workfunction  README.md  pw_scf.in
example/Si/: POSCAR
scripts/: agent_smoketest.py
selfcheck/: run_selfcheck.sh
selfcheck/pseudo/: O.pbe-n-kjpaw_psl.1.0.0.UPF
selfcheck/workflow_case/: workflow.yaml
src/docs/: CLAUDE.md  FILE_STRUCTURE.txt  Rebuild.md  VASP_AUTO_CAPABILITIES.md  (+1 more)
src/vasp_auto/: chain.py  (+27 more)
tests/: conftest.py  test_adsorption_build.py  test_analysis.py  test_ase_builders.py  test_ase_engine.py  test_bugfixes.py  test_calc_types.py  test_chain.py  test_chgcar.py  test_cli_offload.py  test_config_loader.py  test_convergence.py  test_error_handling.py  test_excel_writer.py  test_job_log.py  test_job_manager.py  test_kpoints.py  test_ml_tools.py  test_parser.py  test_pass3_features.py  test_pass7_features.py  test_potcar_finder.py  test_qe.py  test_remote_setup.py  test_report_trajectory.py  test_runner.py  test_structure.py  test_target_utils.py  test_ui_server.py  test_workflow.py
(+6 files in other folders)
