[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vasp-auto"
version = "0.9.2"
description = "Automated preparation, execution, and parsing of VASP DFT calculations"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
# Core = the lean engine that runs on a remote compute node (it just runs VASP).
# Everything heavier — Excel/results parsing, structure builders, the web UI's
# builders, ML pre-relax — lives in the extras below. See docs/INSTALL.md.
dependencies = [
    "PyYAML",
]

[project.optional-dependencies]
# Remote compute node: engine only — core deps already cover it. Named so that
# `pip install vasp-auto[remote]` reads clearly in docs and setup scripts.
remote = []
# Parse finished jobs into an Excel summary.
results = ["pandas", "openpyxl"]
# Structure builders (CLI build commands, the web Builder, the AI builder).
builder = ["ase"]
# Local control machine: full UI + builders + results. The UI server itself is
# pure stdlib (http.server), so it needs no runtime dependency of its own.
local = ["pandas", "openpyxl", "ase"]
# ML pre-relax (OMat24 / UMA) before VASP.
ml = ["ase", "fairchem-core"]
# Development: run the whole test suite (needs the heavy deps too).
dev = ["pytest", "pandas", "openpyxl", "ase"]
# Back-compat alias for the old `[ase]` extra.
ase = ["ase"]

[project.scripts]
vasp-auto = "vasp_auto.cli:main"
vasp-auto-ui = "vasp_auto_ui.server:main"
vasp-auto-setup-remote = "vasp_auto.remote_setup:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vasp_auto_ui = ["static/*"]
